crates/uitest/fixtures/ty/const_ty/const_generic_impl_target_array.snap
---
source: crates/uitest/tests/ty.rs
assertion_line: 46
expression: diags
input_file: fixtures/ty/const_ty/const_generic_impl_target_array.fe
---
error[8-0000]: type mismatch
   ┌─ const_generic_impl_target_array.fe:26:5
   │
26 │     second
   │     ^^^^^^ expected `()`, but `ref u256` is given
